fix contrast in Info in ProductInfo

--- a/next/src/components/_Shop/Product/Info/Info.module.scss
+++ b/next/src/components/_Shop/Product/Info/Info.module.scss
@@ -40,14 +40,14 @@
     }
   }
   .price {
+    color: var(--secondary-600, #504752);
     del {
       font-size: calc(14rem / 16);
-      color: var(--secondary-400, #97879d);
+      color: var(--secondary-500, #726378);
     }
   }
   .omnibus {
     font-size: calc(14rem / 16);
-    color: var(--secondary-400, #97879d);
     margin: clamp(4px, calc(8vw / 7.68), 8px) 0 clamp(12px, calc(20vw / 7.68), 20px);
   }
   .paymentInfo {
